unpackaged/objects/copado__Git_Repository__c.object
<CustomObject>
	<description>Connection to a git repository like github.com or bitbuckets.org</description>
	<fields>
		<fullName>copado__Allow_Functions_Git_Cache__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Allow Functions Git Cache</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>copado__Branch_Base_URL__c</fullName>
		<description>This field enables Copado to create a link to the Git branches&apos; information on your provider&apos;s end.</description>
		<inlineHelpText>Base URL of your Repository branches, e.g.: https://github.com/[COMPANY]/[REPOSITORY]/tree/</inlineHelpText>
		<label>Branch Base URL</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Commit_Base_URL__c</fullName>
		<description>This field enables Copado to create a link to the Git commits&apos; information on your provider&apos;s end.</description>
		<inlineHelpText>Base URL of your Repository commits, e.g.: https://github.com/[COMPANY]/[REPOSITORY]/commit/</inlineHelpText>
		<label>Commit Base URL</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Git_Provider__c</fullName>
		<description>Copado generates specific links to the Git Repository, its branches and commits based on the selected Git Provider.</description>
		<inlineHelpText>Copado generates specific links to the Git Repository, its branches and commits based on the selected Git Provider.</inlineHelpText>
		<label>Git Provider</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Github</fullName>
				</value>
				<value>
					<fullName>Bitbucket</fullName>
				</value>
				<value>
					<fullName>GitLab</fullName>
				</value>
				<value>
					<fullName>Microsoft Team Service</fullName>
				</value>
				<value>
					<fullName>Copado Version Control</fullName>
				</value>
				<value>
					<fullName>Others</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Pull_Request_Base_URL__c</fullName>
		<inlineHelpText>Base URL of your Repository, e.g.: https://github.com/[COMPANY]/[REPOSITORY]/ https://bitbucket.org/[COMPANY]/[REPOSITORY]/ https://gitlab.org/[COMPANY]/[REPOSITORY]/</inlineHelpText>
		<label>Pull Request Base URL</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Source_Format__c</fullName>
		<description>Choose between standard Metadata API folder and file structure or DX source structure that uses a different set of files and file extensions. Default is Metadata.</description>
		<inlineHelpText>Choose between standard Metadata API folder and file structure or DX source structure that uses a different set of files and file extensions. Default is Metadata.</inlineHelpText>
		<label>Source Format</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Metadata</fullName>
					<default>true</default>
					<label>Metadata</label>
				</value>
				<value>
					<fullName>DX</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Tag_Base_URL__c</fullName>
		<inlineHelpText>Base URL of your Repository, e.g.: https://github.com/[COMPANY]/[REPOSITORY]/releases/tag/</inlineHelpText>
		<label>Tag Base URL</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__URI__c</fullName>
		<description>HTTPS or SSH URL to connect to the Git Repository.</description>
		<inlineHelpText>HTTPS or SSH URL to connect to the Git Repository.</inlineHelpText>
		<label>URI</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<label>Git Repository</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__URI__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Git Repository Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Git Repositories</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>